# MealPlanner

./: .env.example  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: config.py  database.py  main.py  models.py  schemas.py
app/data/: indian_meals.py  seasonal_ingredients.py  staple_ingredients.py
app/prompts/: meal_planning.py
app/routers/: api.py  telegram.py  whatsapp.py
app/services/: grocery_manager.py  meal_planner.py  message_sender.py  nutrition.py  scheduler.py  whatsapp_bot.py
app/static/: dashboard.html
scripts/: seed_db.py
tests/: conftest.py  test_config.py  test_data.py  test_grocery_manager.py  test_meal_planner.py  test_message_sender.py  test_models.py  test_prompts.py  test_routers.py  test_scheduler.py  test_schemas.py  test_seed_db.py  test_whatsapp_bot.py
