[project]
name = "meal-plans"
version = "0.1.0"
description = "Meal Planning WhatsApp Agent"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "google-genai>=1.0.0",
    "twilio>=9.0.0",
    "sqlalchemy>=2.0.0",
    "apscheduler>=3.10.0",
    "pydantic-settings>=2.0.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
